popup.html formating

--- a/ios-web-extension Extension/Resources/popup.html
+++ b/ios-web-extension Extension/Resources/popup.html
@@ -6,7 +6,9 @@
     <script type="module" src="popup.js"></script>
 </head>
 <body>
-    <strong>Hello World!</strong>
-    <button id="eth-button" type="button">Click</button>
+    <div>
+    <strong>ETH Address</strong>
+    <button id="eth-button" type="button">Submit</button>
+    </div>
 </body>
 </html>
