--- a/ios-web-extension/Base.lproj/Main.html
+++ b/ios-web-extension/Base.lproj/Main.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <img src="../Icon.png" width="128" height="128" alt="ios-web-extension Icon">
-    <p>You can turn on ios-web-extension’s Safari extension in Settings.</p>
+   <p>Genesis extension example.</p></br>
+   <p>You can turn on Example’s Safari extension in Settings.</p>
 </body>
 </html>
